--- a/022handlers.html
+++ b/022handlers.html
@@ -1,16 +1,14 @@
+ines (13 sloc)  360 Bytes
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="020hideTextButton.js"></script>
+    <script defer src="022handlers.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <button onclick="desaparecer()">Haz click para desaparecer el texto</button>
-    <div id="text">
-    <p>Texto</p>
-    </div>
+
 </body>
 </html>
