--- a/027returnFalse.html
+++ b/027returnFalse.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="020hideTextButton.js"></script>
+    <script defer src="027returnFalse.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <button onclick="desaparecer()">Haz click para desaparecer el texto</button>
-    <div id="text">
-    <p>Texto</p>
-    </div>
+    <a href="https://w3.org" onclick="handler(e)">el navegador irá a w3.org</a>
 </body>
 </html>
